demo-webserver/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-webserver

  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: demo-webserver

  annotations:
    argocd.argoproj.io/sync-wave: "21"

spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http

  selector:
    app.kubernetes.io/name: demo-webserver
