demo-webserver/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-webserver

  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: demo-webserver

  annotations:
    argocd.argoproj.io/sync-wave: "22"

spec:
  host: demo-webserver-demo-webserver-raw.apps.cluster01.sandbox677.opentlc.com

  port:
    targetPort: http

  tls:
    termination: edge

  to:
    kind: Service
    name: demo-webserver
    weight: 100

  wildcardPolicy: None
